@@ -1,6 +1,6 @@
 # Files to ignore by git
 #
-# Version: 20141227
+# Version: 20150725
 
 # Generic auto-generated build files
 *~
@@ -33,6 +33,7 @@ stamp-h[1-9]
 /ABOUT-NLS
 /aclocal.m4
 /autom4te.cache/
+/build
 /compile
 /config.guess
 /config.log
@@ -41,6 +42,7 @@ stamp-h[1-9]
 /config.sub
 /configure
 /depcomp
+/dist
 /install-sh
 /libtool
 /ltmain.sh
@@ -111,7 +113,7 @@ stamp-h[1-9]
 /libcpath/libcpath.rc
 /libcpath/libcpath_definitions.h
 /tests/cpath_test_path
-/tests/tmp
+/tests/tmp*
 
 # Local library dependencies specific files
 /libcerror
